# chordr

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-MIT  README.md  build-deploy.sh
chordr/: Cargo.toml
chordr-runner/: Cargo.toml
chordr-runner/src/: bin.rs  error.rs
chordr-runner/src/configuration/: mod.rs  reader.rs
chordr-runner/src/task/: build_catalog_task.rs  collection_task.rs  download_task.rs  mod.rs
chordr-runner/tests/resources/: configuration-dropbox.json  configuration-webdav.json  configuration.json  configuration.yaml
chordr/resources/html/: example.html  head.html  main.css  main.css.map  main.scss
chordr/src/: bin.rs
cqrs/: Cargo.toml  build.rs
cqrs-desync/: Cargo.toml
cqrs-desync/src/: code_updater.rs  error.rs  file_reader.rs  file_writer.rs  lib.rs  main.rs  prelude.rs
cqrs/src/: async_repository.rs  command.rs  command_executor.rs  command_type.rs  lib.rs  prelude.rs  record_trait.rs  repository.rs
cqrs/src/blocking/: backend.rs  command_executor.rs  mod.rs  query_executor.rs  repository.rs
cqrs/src/command/: command_conflict.rs  command_executor.rs  command_type.rs  mod.rs
cqrs/src/command_log/: conflict_resolver.rs  log_entry.rs  mod.rs  test_helpers.rs  warning.rs
cqrs/src/nonblocking/: command_executor.rs  mod.rs  query_executor.rs  repository.rs
cqrs/src/query/: mod.rs  query_type.rs
hyperdav/: .gitlab-ci.yml  Cargo.toml  README.md
hyperdav/src/: client.rs  error.rs  lib.rs  response.rs
hyperdav/tests/: client.rs
libchordr/: Cargo.toml
libchordr/benches/: catalog_builder_benchmark.rs  converter_benchmark.rs  parse_benchmark.rs  search_benchmark.rs  tokenize_benchmark.rs  transpose_benchmark.rs
libchordr/examples/: search.rs
libchordr/src/: error.rs  format.rs  helper.rs  lib.rs  prelude.rs  test_helpers.rs
libchordr/src/catalog_builder/: catalog_build_error.rs  mod.rs  song_from_dir_entry.rs
libchordr/src/converter/: html.rs  mod.rs
libchordr/src/data_exchange/: deserializer_error.rs  deserializer_trait.rs  mod.rs  serde_helper.rs  serializer_error.rs  serializer_trait.rs
libchordr/src/html/: attribute.rs  const_tag.rs  content.rs  dynamic_tag.rs  escape.rs  mod.rs  tag.rs  tag_builder.rs  tag_name.rs
libchordr/src/metadata/: keyword.rs  metadata_trait.rs  mod.rs
libchordr/src/models/: catalog.rs  file_type.rs  mod.rs  prelude.rs  record_id_trait.rs  record_trait.rs  setlist.rs  setlist_entry.rs  song.rs  song_data.rs  song_id.rs  song_list.rs  song_meta.rs  song_meta_trait.rs  song_metadata.rs  song_settings.rs  song_sorting.rs
libchordr/src/modification/: mod.rs
libchordr/src/parser/: meta.rs  meta_information.rs  meta_parser.rs  metadata.rs  metadata_builder.rs  metadata_parser.rs  mod.rs  node.rs  node_parser.rs  parser_result.rs  section_type.rs
libchordr/src/pdf/: coordinates.rs  mod.rs  pdf_builder.rs  styles.rs
libchordr/src/repeat_detector/: mod.rs  state_machine.rs
libchordr/src/search/: index.rs  mod.rs
libchordr/src/test_helpers/: mod.rs  parsing.rs
libchordr/src/tokenizer/: meta.rs  metadata.rs  mod.rs  mode.rs  modifier.rs  token.rs  tokenizer_error.rs
libchordr/tests/resources/: german-test.chorddown  song-id with spaces.chorddown  swing_low_sweet_chariot.chorddown  swing_low_sweet_chariot.html
srvchord/: .env  Cargo.toml  Rocket.toml  diesel.toml
srvchord/migrations/2020-04-29-163812_create_setlist_tables/: down.sql  up.sql
srvchord/migrations/2020-05-08-172620_create_user/: up.sql
srvchord/migrations/2020-06-28-140234_create_team/: down.sql  up.sql
srvchord/migrations/2020-12-12-182013_alter_setlist_entry/: down.sql  up.sql
srvchord/migrations/2021-05-17-202513_remove_column_file_type/: down.sql  up.sql
srvchord/src/: config.rs  cors.rs  error.rs  main.rs  schema.rs  test_helpers.rs
srvchord/src/authentication/: mod.rs
srvchord/src/command/: mod.rs
srvchord/src/domain/: cqs_context.rs  credentials.rs  mod.rs  traits.rs
srvchord/src/routes/: mod.rs  setlist.rs  status.rs  user.rs
srvchord/src/test_helpers/: json_formatting.rs
srvchord/src/traits/: header.rs  mod.rs  repository.rs
synchord/: Cargo.toml
synchord/src/: bin.rs  error.rs  helper.rs  lib.rs  prelude.rs
synchord/src/service/: abstract_service_config.rs  dropbox_service.rs  file_entry.rs  mod.rs  service_config.rs  service_configuration.rs  service_identifier.rs  web_dav_service.rs
synchord/tests/resources/: webdav_response.xml
webchordr/: .editorconfig  Cargo.toml  bootstrap.js  build.rs  dev-server.py  package.json  trunk_index.html  tsconfig.json  webpack.config.js
webchordr-song-browser/: Cargo.toml
webchordr-song-browser/src/: index_item.rs  lib.rs
webchordr-song-list/: Cargo.toml  package.json
webchordr-song-list/src/: item.rs  lib.rs
webchordr/app/: .editorconfig  Cargo.toml  README.md  Trunk.toml  bootstrap.ts  build.rs  index.html  package.json  trunk_index.html  update-service-worker.sh  webpack.config.js
webchordr/app/src/: app.rs  handler.rs  liby.rs  main.rs  route.rs  routing.rs
webchordr/app/static/: .gitignore  .rgignore  index.html  manifest.json  service-worker.js
webchordr/common/: Cargo.toml
webchordr/common/src/: constants.rs  errors.rs  lib.rs  prelude.rs  route.rs  tri.rs
webchordr/drag-n-drop/: Cargo.toml
webchordr/drag-n-drop/src/: dropzone.js  handle.rs  lib.rs  wasm.rs
webchordr/events/: Cargo.toml
webchordr/events/src/: setlist_events.rs  settings_events.rs
webchordr/persistence/: Cargo.toml
webchordr/persistence/src/: command_context.rs  lib.rs  shared.rs  storage_key_utility.rs
webchordr/song-browser/: Cargo.toml
webchordr/song-browser/src/: index.rs  index_item.rs  lib.rs  (+1 more)
webchordr/song-list/: Cargo.toml  package.json  tsconfig.json  webpack.config.js
webchordr/src/: app.rs  constants.rs  errors.rs  events.rs  handler.rs  helpers.rs  lib.rs  main.rs  route.rs  setlist.rs  setlist_entry.rs  setlist_serializer_service.rs  sortable_service.rs  test_helpers.rs
webchordr/src-typescript/: SortableWrapper-trunk.js  SortableWrapper.ts
webchordr/static/: .gitignore  index.html  manifest.json  setup.js  sw.js
(+389 files in other folders)
