[workspace]
members = [
    "chordr",
    "libchordr",
    "cqrs",
    "tri",
    "webchordr/app",
    "webchordr/common",
    "webchordr/events",
    "webchordr/persistence",
    "webchordr/song-browser",
    "webchordr/song-list",
    "synchord",
    "chordr-runner",
    "srvchord",
]

[profile.release.package.webchordr]
opt-level = 's'
