[workspace]
members = [
    "chordr",
    "libchordr",
    "cqrs",
    "cqrs-desync",
    "tri",
    "webchordr/app",
    "webchordr/common",
    "webchordr/drag-n-drop",
    "webchordr/events",
    "webchordr/persistence",
    "webchordr/song-browser",
    "webchordr/song-list",
    "synchord",
    "chordr-runner",
    "srvchord",
    "hyperdav",
]

resolver = "2"

[profile.release.package.webchordr]
opt-level = 's'
