[package]
name = "chordr-runner"
version = "0.1.0"
authors = ["Daniel Corn <info@cundd.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/chorddown/chordr"
description = """
Service to synchronize chorddown files with online
file services
"""

[[bin]]
name = "chordr-runner"
path = "src/bin.rs"

[features]
yaml = ["serde_yaml"]
default = ["yaml"]

[dependencies]
libchordr = { path = "../libchordr" }
synchord = { path = "../synchord" }
clap = "2.33.0"
log = "0.4.8"
simplelog = "^0.6.0"
chrono = "^0.4.10"
hyperdav = "0.2.0"
reqwest = "0.8"
xml-rs = "0.3"
serde = {version ="^1.0", features = ["derive"]}
serde_derive = "^1.0"
serde_json = "^1.0"
serde_yaml = {version="^0.8.11", optional=true}
