[package]
name = "chordr-runner"
version = "0.1.0"
authors = ["Daniel Corn <info@cundd.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/chorddown/chordr"
description = """
Service to synchronize chorddown files with online
file services
"""

[[bin]]
name = "chordr-runner"
path = "src/bin.rs"

[features]
yaml = ["serde_yaml"]
default = ["yaml"]

[dependencies]
chrono = { version = "^0.4.19", default-features = false, features = ["std", "clock"] }
clap = "2.33.0"
libchordr = { path = "../libchordr" }
log = "^0.4.8"
serde = {version ="^1.0", features = ["derive"]}
serde_derive = "^1.0"
serde_json = "^1.0"
serde_yaml = {version="^0.8.11", optional=true}
simplelog = "^0.12.0"
synchord = { path = "../synchord" }
