[package]
name = "chordr"
version = "0.1.0"
authors = ["Daniel Corn <info@cundd.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/chorddown/chordr"
description = """
CLI tool to manage catalogs and convert
chorddown files
"""

[[bin]]
name = "chordr"
path = "src/bin.rs"

[dependencies]
libchordr = { path = "../libchordr" }
clap = "2.33.0"
serde_json = "^1.0"
ansi_term = "0.12"
atty = "0.2"
log = { version = "0.4", features = ["release_max_level_debug"] }
simplelog = "^0.12.0"
