[package]
name = "cqrs"
version = "0.1.0"
authors = ["Daniel Corn <info@cundd.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/chorddown/chordr"
description = """
Library with functionality for chorddown file
handling and basic data structures
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cqrs"
path = "src/lib.rs"

[dependencies]
libchordr = { path = "../libchordr" }
#log = "0.4"
serde = "1"
serde_derive = "1"
#serde_json = "1.0.53"
#rand = "0.7.2"
#percent-encoding = "2.1.0"
#wee_alloc = "0.4.5"
#wasm-logger = "0.2"
#js-sys = "0.3.44"
#wasm-bindgen-futures = "0.4.17"
#async-trait = "0.1.37"
#chrono = { version = "*", features = ["serde", "wasmbind"] }
#base64 = "^0.12.1"
#serde = {version ="^1.0", features = ["derive"]}
#serde_derive = "^1.0"
#printpdf = { version = "0.2.8", optional = true }
#rand = "0.7.2"
#encoding = "^0.2.33"
#chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
#serde_json = "^1.0"
