[package]
name = "cqrs"
version = "0.1.0"
authors = ["Daniel Corn <info@cundd.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/chorddown/chordr"
description = """
CQ(R)S library
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cqrs"
path = "src/lib.rs"

[dependencies]
tri = { path = "../tri" }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
async-trait = "^0.1.52"
