[package]
name = "hyperdav"
description = "WebDAV client"
repository = "https://gitlab.com/Gahr/hyperdav"
version = "0.2.0"
authors = ["Wesley Gahr <wesley.gahr@me.com>"]
license = "MIT"
documentation = "https://docs.rs/hyperdav/0.2.0/hyperdav/"
edition = "2018"

[dependencies]
reqwest = { version = "^0.11.11", features = ["blocking"] }
xml-rs = "^0.8.4"

[dev-dependencies.uuid]
version = "^1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
#    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
