[package]
name = "libchordr"
version = "0.1.11"
authors = ["Daniel Corn <info@cundd.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/chorddown/chordr"
description = """
Library with functionality for chorddown file
handling and basic data structures
"""

[lib]
name = "libchordr"
path = "src/lib.rs"

[features]
parallel_catalog_builder = ["rayon"]

[dependencies]
chrono = { version = "^0.4.19", default-features = false, features = ["std", "clock", "serde"] }
cqrs = { path = "../cqrs" }
log = "0.4"
rayon = { version = "1.5.1", optional = true }
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_qs = { version = "0.9.2" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
pretty_assertions = "^1.2.1"
serde_json = "^1.0"

[[bench]]
name = "parse_benchmark"
harness = false

[[bench]]
name = "catalog_builder_benchmark"
harness = false

[[bench]]
name = "converter_benchmark"
harness = false

[[bench]]
name = "tokenize_benchmark"
harness = false

[[bench]]
name = "transpose_benchmark"
harness = false

[[bench]]
name = "search_benchmark"
harness = false
