[package]
name = "srvchord"
version = "0.1.0"
authors = ["Daniel Corn <info@cundd.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/chorddown/chordr"
description = """
Chorddown web application - Server side
"""

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.3", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.3"
log = "0.4"
base64 = "^0.12.1"
rust-argon2 = "^0.8.2"
libchordr = { path = "../libchordr" }
cqrs = { path = "../cqrs" }
chrono = { version = "*", features = ["serde"] }
#rocket_cors = "0.5.2"

[dev-dependencies]
parking_lot = "0.10"
rand = "0.7"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_sqlite_pool"]
