[package]
name = "srvchord"
version = "0.1.0"
authors = ["Daniel Corn <info@cundd.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/chorddown/chordr"
description = """
Chorddown web application - Server side
"""

[dependencies]
async-trait = "^0.1.52"
base64 = "^0.12.1"
chrono = { version = "^0.4.19", default-features = false, features = ["std", "clock", "serde"] }
cqrs = { path = "../cqrs" }
diesel = { version = "1.3", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.3"
libchordr = { path = "../libchordr" }
log = "0.4"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rust-argon2 = "^0.8.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tri = { path = "../tri" }

[dev-dependencies]
parking_lot = "0.10"
rand = "0.7"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_sqlite_pool"]
