[package]
name = "synchord"
version = "0.1.0"
authors = ["Daniel Corn <info@cundd.net>"]
edition = "2018"

[[bin]]
name = "synchord"
path = "src/bin.rs"

[dependencies]
libchordr = { path = "../libchordr" }
clap = "2.33.0"
log = "0.4.8"
simplelog = "^0.6.0"
chrono = "^0.4.10"
hyperdav = "0.2.0"
reqwest = "0.8"
xml-rs = "0.3"

[dependencies.dropbox-sdk]
version = "*"
default_features = false
features = ["dbx_files", "dbx_users", "hyper_client"]
