[package]
name = "synchord"
version = "0.1.0"
authors = ["Daniel Corn <info@cundd.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/chorddown/chordr"
description = """
CLI tool to synchronize chorddown files with online file services
"""

[lib]
name = "libsynchord"
path = "src/lib.rs"

[[bin]]
name = "synchord"
path = "src/bin.rs"

[dependencies]
clap = "2.33.0"
log = "0.4.8"
simplelog = "^0.12.0"
chrono = "^0.4.10"
hyperdav = { path = "../hyperdav" }
reqwest = { version = "0.11", features = ["blocking"] }
xml-rs = "0.3"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"

[dependencies.dropbox-sdk]
version = "0.11.3"
default_features = false
features = ["dbx_files", "dbx_users", "default_client"]
