[package]
name = "webchordr-song-browser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = "1"
serde_derive = "1"
#serde_json = "1.0.53"
#rand = "0.7.2"
libchordr = { path = "../libchordr" }
webchordr-events = { path = "../webchordr-events" }
webchordr-song-list = { path = "../webchordr-song-list" }
webchordr-common = { path = "../webchordr-common" }
yew = "0.18"
#yew-router = "0.15"
#percent-encoding = "2.1.0"
#wee_alloc = "0.4.5"
#wasm-logger = "0.2"
js-sys = "0.3.44"
wasm-bindgen-futures = "0.4.17"
chrono = { version = "*", features = ["serde", "wasmbind"] }
unicode-segmentation = "1.8.0"
# Require a current version of lexical-core

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
chrono = { version = "*" }

[dependencies.wasm-bindgen]
version = "0.2.67"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.44"
features = [
    'KeyboardEvent',
    'HtmlElement',
    'Document',
    'HtmlDocument',
    'Url',
    'DateTimeValue',
    'Window',
    'Location',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'RequestCredentials',
    'Response',
    'Storage',
    'History',
    'Navigator',
]
