[package]
name = "webchordr"
version = "0.1.12"
authors = ["Daniel Corn <info@cundd.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/chorddown/chordr"
description = """
Chorddown web application - Client side
"""

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1.0.53"
rand = "0.7.2"
libchordr = { path = "../libchordr" }
yew = "0.17"
yew-router = "0.14"
percent-encoding = "2.1.0"
wee_alloc = "0.4.5"
wasm-logger = "0.2"
js-sys = "0.3.44"
wasm-bindgen-futures = "0.4.17"
async-trait = "0.1.37"
chrono = { version = "*", features = ["serde", "wasmbind"] }
base64 = "^0.12.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.wasm-bindgen]
version = "0.2.67"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.44"
features = [
    'KeyboardEvent',
    'HtmlElement',
    'Document',
    'HtmlDocument',
    'Url',
    'DateTimeValue',
    'Window',
    'Location',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'RequestCredentials',
    'Response',
    'Storage',
    'History',
    'Navigator',
]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# Should we enable wasm-bindgen's debug assertions in its generated JS glue?
#debug-js-glue = true
# Should wasm-bindgen demangle the symbols in the "name" custom section?
demangle-name-section = true
# Should we emit the DWARF debug info custom sections?
dwarf-debug-info = true
