[package]
name = "webchordr"
version = "0.2.2"
authors = ["Daniel Corn <info@cundd.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/chorddown/chordr"
description = """
Chorddown web application - Client side
"""

[features]
trunk_build = []

# Enabling `server_sync` shows the login button in the footer and enables
# periodically checks for a connection to the server
server_sync = []

[dependencies]
async-trait = "^0.1.52"
base64 = "^0.13.0"
chrono = { version = "^0.4.19", default-features = false, features = ["std", "clock", "serde", "wasmbind"] }
cqrs = { path = "../../cqrs" }
gloo-dialogs = "^0.1.0"
gloo-events = "^0.1.2"
gloo-timers = "^0.2.3"
js-sys = "^0.3.58"
libchordr = { path = "../../libchordr" }
log = "0.4"
percent-encoding = "2.1.0"
serde = "1"
serde-wasm-bindgen = "^0.6.5"
serde_derive = "1"
serde_json = "1.0.53"
tri = { path = "../../tri" }
unicode-segmentation = "1.8.0"
wasm-bindgen-futures = "^0.4.31"
wasm-logger = "0.2"
webchordr-common = { path = "../common" }
webchordr-drag-n-drop = { path = "../drag-n-drop" }
webchordr-events = { path = "../events" }
webchordr-persistence = { path = "../persistence" }
webchordr-song-browser = { path = "../song-browser" }
webchordr-song-list = { path = "../song-list" }
wee_alloc = "0.4.5"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
chrono = { version = "^0.4.19", default-features = false, features = ["std", "clock"] }

[dependencies.wasm-bindgen]
version = "^0.2.81"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "^0.3.58"
features = [
    'KeyboardEvent',
    'HtmlElement',
    'Document',
    'DomStringMap',
    'HtmlDocument',
    'Url',
    'EventTarget',
    'DateTimeValue',
    'Window',
    'Location',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'RequestCredentials',
    'Response',
    'Storage',
    'ServiceWorker',
    'ScrollToOptions',
    'ServiceWorkerContainer',
    'History',
    'Navigator',
]

[package.metadata.wasm-pack.profile.dev]
# Should `wasm-opt` be used to further optimize the wasm binary generated after
# the Rust compiler has finished? Using `wasm-opt` can often further decrease
# binary size or do clever tricks that haven't made their way into LLVM yet.
#
# Configuration is set to `false` by default for the dev profile, but it can
# be set to an array of strings which are explicit arguments to pass to
# `wasm-opt`. For example `['-Os']` would optimize for size while `['-O4']`
# would execute very expensive optimizations passes
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
# Should `wasm-opt` be used to further optimize the wasm binary generated after
# the Rust compiler has finished? Using `wasm-opt` can often further decrease
# binary size or do clever tricks that haven't made their way into LLVM yet.
#
# Configuration is set to `false` by default for the dev profile, but it can
# be set to an array of strings which are explicit arguments to pass to
# `wasm-opt`. For example `['-Os']` would optimize for size while `['-O4']`
# would execute very expensive optimizations passes
wasm-opt = ['-Os']

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# Should we enable wasm-bindgen's debug assertions in its generated JS glue?
#debug-js-glue = true
# Should wasm-bindgen demangle the symbols in the "name" custom section?
demangle-name-section = true
# Should we emit the DWARF debug info custom sections?
dwarf-debug-info = true
