[package]
name = "webchordr-common"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1.0.53"
libchordr = { path = "../../libchordr" }
tri = { path = "../../tri" }
yew = "0.19"
yew-router = "0.16"
percent-encoding = "2.1.0"
wee_alloc = "0.4.5"
wasm-logger = "0.2"
js-sys = "^0.3.58"
wasm-bindgen-futures = "^0.4.31"
async-trait = "^0.1.52"
chrono = { version = "^0.4.19", default-features = false, features = ["std", "clock", "serde", "wasmbind"] }
base64 = "^0.13.0"
unicode-segmentation = "1.8.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
chrono = { version = "^0.4.19", default-features = false, features = ["std", "clock"] }

[dependencies.wasm-bindgen]
version = "^0.2.81"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "^0.3.58"
features = [
    'Headers',
    'Navigator',
    'Request',
    'RequestCredentials',
    'RequestInit',
    'RequestMode',
    'Response',
]
