[package]
name = "webchordr-common"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "^0.1.52"
base64 = "^0.13.0"
chrono = { version = "^0.4.19", default-features = false, features = ["std", "clock", "serde", "wasmbind"] }
js-sys = "^0.3.58"
libchordr = { path = "../../libchordr" }
log = "0.4"
percent-encoding = "2.1.0"
serde = "1"
serde-wasm-bindgen = "^0.6.5"
serde_derive = "1"
serde_json = "1.0.53"
tri = { path = "../../tri" }
unicode-segmentation = "1.8.0"
wasm-bindgen-futures = "^0.4.31"
wasm-logger = "0.2"
wee_alloc = "0.4.5"
yew = "0.20"
yew-router = "0.17"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
chrono = { version = "^0.4.19", default-features = false, features = ["std", "clock"] }

[dependencies.wasm-bindgen]
version = "^0.2.81"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "^0.3.58"
features = [
    'Headers',
    'Navigator',
    'Request',
    'RequestCredentials',
    'RequestInit',
    'RequestMode',
    'Response',
]
