[package]
name = "webchordr-drag-n-drop"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "^0.3.58"
serde = "1"
serde-wasm-bindgen = "^0.6.5"
wasm-bindgen-futures = "^0.4.31"
webchordr-common = { path = "../common" }
yew = "0.20"

[dependencies.wasm-bindgen]
version = "^0.2.81"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "^0.3.58"
features = [
    'HtmlElement',
    'Document',
    'HtmlDocument',
    'EventTarget',
    'DateTimeValue',
    'Window',
]
