[package]
name = "webchordr-persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1.0.53"
libchordr = { path = "../../libchordr" }
webchordr-common = { path = "../common" }
yew = "0.18"
js-sys = "0.3.44"
wasm-bindgen-futures = "0.4.17"
async-trait = "0.1.51"
chrono = { version = "*", features = ["serde", "wasmbind"] }
base64 = "^0.13.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
chrono = { version = "*" }

[dependencies.wasm-bindgen]
version = "0.2.67"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.44"
features = [
    'KeyboardEvent',
    'HtmlElement',
    'Document',
    'HtmlDocument',
    'Url',
    'DateTimeValue',
    'Window',
    'Location',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'RequestCredentials',
    'Response',
    'Storage',
    'History',
    'Navigator',
]
