[package]
name = "webchordr-persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1.52"
base64 = "^0.13.0"
chrono = { version = "^0.4.19", default-features = false, features = ["std", "clock", "serde", "wasmbind"] }
cqrs = { path = "../../cqrs" }
js-sys = "^0.3.58"
libchordr = { path = "../../libchordr" }
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1.0.53"
wasm-bindgen-futures = "^0.4.31"
webchordr-common = { path = "../common" }
yew = "0.20"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dev-dependencies.tokio]
version = "1.20"
features = ["rt", "macros"]

[dependencies.wasm-bindgen]
version = "^0.2.81"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.44"
features = [
    'KeyboardEvent',
    'HtmlElement',
    'Document',
    'HtmlDocument',
    'Url',
    'DateTimeValue',
    'Window',
    'Location',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'RequestCredentials',
    'Response',
    'Storage',
    'History',
    'Navigator',
]
